Fix JOGL native access relaunch handling